Make changes to build.gradle and gradle.yml